src/objects/LRN_Exam_Detail_Template__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dificult__c</fullName>
        <label>Dificult</label>
        <picklist>
            <picklistValues>
                <fullName>Easy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Image_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Image Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LRN_Exam_Area_Template__c</fullName>
        <label>LRN Exam Area Template</label>
        <referenceTo>LRN_Exam_Area_Template__c</referenceTo>
        <relationshipLabel>LRN_Exam_Detail_Templates</relationshipLabel>
        <relationshipName>LRN_Exam_Detail_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Answer__c</fullName>
        <label>Question/Answer</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Image__c</fullName>
        <label>Question Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LRN Exam Detail Template</label>
        <referenceTo>LRN_Exam_Detail_Template__c</referenceTo>
        <relationshipLabel>LRN_Exam_Detail_Templates</relationshipLabel>
        <relationshipName>LRN_Exam_Detail_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value</label>
        <type>Checkbox</type>
    </fields>
    <label>LRN Exam Detail Template</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LRN Detail Templ - {00000}</displayFormat>
        <label>LRN Exam Detail Template</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LRN Exam Detail Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>